--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -19,8 +19,8 @@
                   <img src="{% static "assets/rubber-duck-beta.png" %}" width="108px" height="auto" alt="">
               </a>
               <div class="justify-content-end">
-                <form class="d-flex">
-                    <input class="form-control" type="search" placeholder="Іздеу..." size="50px">
+                <form class="d-flex" action="{% url 'search' %}" method="get">
+                    <input class="form-control" type="search" placeholder="Іздеу..." size="50px" name="q">
                     <div class="btn-group" role="group">
                         <button class="btn btn-secondary" hidden="true"></button>
                         <button class="btn btn-secondary" type="submit"><img src="{% static "assets/search.svg" %}" width="26px" height="auto" alt=""></button>
