--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -15,8 +15,8 @@
         <!-- Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-              <a class="navbar-brand" href="{% url 'main' %}">
-                  <img src="{% static "assets/rubber-duck-beta.png" %}" width="108px" height="auto" alt="">
+              <a class="navbar-brand px-5" href="{% url 'main' %}">
+                  <img src="{% static "assets/rubber-duck-beta.png" %}" width="84px" height="auto" alt="">
               </a>
               <div class="justify-content-end">
                 <form class="d-flex" action="{% url 'search' %}" method="get">
