--- a/templates/website/paper_detail.html
+++ b/templates/website/paper_detail.html
@@ -8,14 +8,21 @@
         {{ paper.title }}
     </h4>
     <hr>
-        <div class="Content" align="justify">
-            {% for content in object_list %}
-                {{content|safe}}
-            {% endfor %}
-        </div>
-        {% if is_paginated %}
-            {% include "includes/pagination.html" %}
-        {% endif %}
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="pb-4 Content" align="justify">
+                    {% for content in object_list %}
+                        {{content|safe}}
+                    {% endfor %}
+                </div>
+                {% if is_paginated %}
+                    {% include "includes/pagination.html" %}
+                {% endif %}
+            </div>
+            <div class="col-lg-4">
+                
+            </div>
+        </div>    
 </div>
 
 {% endblock content %}
