--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -12,6 +12,11 @@
         <link rel="stylesheet" href="{% static "css/style.css" %}">
     </head>
     <body>
+        <!-- Loader -->
+        <div class="loader">
+            <img src="{% static 'assets/loading.gif' %}" alt="Loading..." />
+        </div>
+
         <!-- Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
@@ -41,5 +46,12 @@
                 <p class="p-3 text-center">&copy; ReferDuck 2021</p>
             </div>
         </footer>
+        
+        <script type="text/javascript">
+            window.addEventListener("load", function () {
+                const loader = document.querySelector(".loader");
+                loader.className += " hidden"; // class "loader hidden"
+            });
+        </script>     
     </body>
 </html>
