--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -41,9 +41,12 @@
         <!-- Footer-->
         <footer class="footer mt-4 mb-4">
             <div class="container">
-                <p class="m-0 p-3 text-center">site is under construction</p>
-                <img src="{% static 'assets/coder.gif' %}" width="122px" alt="" style="display: block; margin-left: auto; margin-right: auto;">
-                <p class="p-3 text-center">&copy; ReferDuck 2021</p>
+                <!-- <p class="m-0 p-3 text-center">site is under construction</p>
+                <img src="{% static 'assets/coder.gif' %}" width="122px" alt="" style="display: block; margin-left: auto; margin-right: auto;"> -->
+                <p class="p-3">&copy; 2021 - 2022 
+                    <a href="{% url 'main' %}">ReferDuck </a>
+                    - тегін рефераттар, курстық және дипломдық жұмыстар
+                </p>
             </div>
         </footer>
         
