--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -7,12 +7,12 @@
             <div class="container">
                 <div class="p-4 p-lg-5 rounded-3 text-center">
                     <div class="m-4 m-lg-5">
-                        <h1 class="display-6 fw-bold">Қазақ тіліндегі рефераттар, курстық және дипломдық жұмыстар!</h1>
+                        <h1 class="display-6">Қазақ тіліндегі рефераттар, курстық және дипломдық жұмыстар!</h1>
                     </div>
                 </div>
             </div>
         </header>
-        <section class="p-4 p-lg-5 text-center">
+        <section class="p-4 p-lg-5">
             <div class="container">
                 <div class="header">
                     <div class="d-flex justify-content-center">
@@ -29,6 +29,15 @@
                     </div>
                     {% endfor %}
                 </div>
+                <hr class="my-5">
+                <h4>
+                    Сайтты пайдалану ережелері
+                </h4>
+                <p>
+                    ReferDuck сайтында ұсынылған жұмыс (реферат/курстық жұмыс/дипломдық жұмыс және т.б.) және / немесе жұмыстың мазмұны тек танысуға арналған. 
+                    ReferDuck сайтында ұсынылған жұмыстарға және/немесе жұмыс мазмұнына қатысты барлық құқықтар олардың заңды құқық иеленушілеріне тиесілі. 
+                    Сайт әкімшілігі ReferDuck сайтында ұсынылған жұмыстарды және/немесе жұмыс мазмұнын пайдалануға байланысты туындаған немесе алынған ықтимал зиян және/немесе залал үшін жауапты емес
+                </p>
             </div>
         </section>
 
