--- a/templates/website/search_results.html
+++ b/templates/website/search_results.html
@@ -3,8 +3,8 @@
 {% block title %}  Іздеу нәтижесі {% endblock title %}
 {% block content %}
 <section class="p-4 p-lg-5">
-    <div class="container ">
-        <h3 class="font-weight-bold"> 
+    <div class="container">
+        <h3 class="font-weight-bold pb-4"> 
             Іздеу нәтижесі:
         </h3>
     {% for paper in object_list %}
