--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,13 +1,15 @@
 {% extends 'website/base.html' %}
 
-{% block title %} Қазақша рефераттар {% endblock title %}
+{% load i18n %}
+
+{% block title %} {% trans 'Қазақша рефераттар' %} {% endblock title %}
 
     {% block content %}
         <header class="pt-5">
             <div class="container">
                 <div class="p-4 rounded-3 text-center">
                     <div class="m-4 m-lg-5">
-                        <h1 class="display-6">Қазақ тіліндегі рефераттар, курстық және дипломдық жұмыстар!</h1>
+                        <h1 class="display-6">{% trans 'Қазақ тіліндегі рефераттар, курстық және дипломдық жұмыстар!' %}</h1>
                     </div>
                 </div>
             </div>
@@ -16,7 +18,7 @@
             <div class="container">
                 <div class="header">
                     <div class="d-flex justify-content-center">
-                        <h4>Пәндер</h4>
+                        <h4>{% trans 'Пәндер' %}</h4>
                     </div>
                 </div>
                 <div class="row pt-2">
@@ -30,12 +32,10 @@
                 </div>
                 <hr class="my-5">
                 <h4>
-                    Сайтты пайдалану ережелері
+                    {% trans 'Сайтты пайдалану ережелері' %}
                 </h4>
                 <p>
-                    ReferDuck сайтында ұсынылған жұмыс (реферат/курстық жұмыс/дипломдық жұмыс және т.б.) және / немесе жұмыстың мазмұны тек танысуға арналған. 
-                    ReferDuck сайтында ұсынылған жұмыстарға және/немесе жұмыс мазмұнына қатысты барлық құқықтар олардың заңды құқық иеленушілеріне тиесілі. 
-                    Сайт әкімшілігі ReferDuck сайтында ұсынылған жұмыстарды және/немесе жұмыс мазмұнын пайдалануға байланысты туындаған немесе алынған ықтимал зиян және/немесе залал үшін жауапты емес
+                    {% trans 'ReferDuck сайтында ұсынылған жұмыс (реферат/курстық жұмыс/дипломдық жұмыс және т.б.) және / немесе жұмыстың мазмұны тек танысуға арналған. ReferDuck сайтында ұсынылған жұмыстарға және/немесе жұмыс мазмұнына қатысты барлық құқықтар олардың заңды құқық иеленушілеріне тиесілі. Сайт әкімшілігі ReferDuck сайтында ұсынылған жұмыстарды және/немесе жұмыс мазмұнын пайдалануға байланысты туындаған немесе алынған ықтимал зиян және/немесе залал үшін жауапты емес' %}
                 </p>
             </div>
         </section>
