--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -1,7 +1,6 @@
-{% load static i18n %}
-
+{% load static %}
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="kk">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -32,23 +31,8 @@
                         <button class="btn btn-secondary" hidden="true"></button>
                         <button class="btn btn-secondary" type="submit"><img src="{% static "assets/search.svg" %}" width="24px" height="auto" alt=""></button>
                     </div>
+                </form>
               </div>  
-            </form>
-            <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-                <input name="next" type="hidden" value="{{ redirect_to }}">
-                <select name="language">
-                    {% get_current_language as LANGUAGE_CODE %}
-                    {% get_available_languages as LANGUAGES %}
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    {% for language in languages %}
-                        <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %}
-                                selected{% endif %}>
-                            {{ language.name_local }} ({{ language.code }})
-                        </option>
-                    {% endfor %}
-                </select>
-                <input type="submit" value="Ok">
-            </form>
               </div>
             </div>
           </nav>
@@ -62,7 +46,7 @@
                 <img src="{% static 'assets/coder.gif' %}" width="122px" alt="" style="display: block; margin-left: auto; margin-right: auto;"> -->
                 <p class="p-3">&copy; 2022 
                     <a href="{% url 'main' %}">ReferDuck </a>
-                    {% trans '- тегін рефераттар, курстық және дипломдық жұмыстар' %}
+                    - тегін рефераттар, курстық және дипломдық жұмыстар
                 </p>
             </div>
         </footer>
